--- a/Site/package.json
+++ b/Site/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "chartjs": "^0.3.24",
+    "cookies": "^0.9.1",
+    "cookies-next": "^4.1.0",
     "firebase": "^10.7.1",
+    "lucide-react": "^0.311.0",
     "next": "14.0.4",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
+    "react-cookie": "^7.0.1",
     "react-dom": "^18"
   },
   "devDependencies": {
